--- a/dashboard.html
+++ b/dashboard.html
@@ -154,18 +154,16 @@
                                 <p>Pedang plasma generasi terbaru dengan teknologi neural sync</p>
                                 <span class="weapon-status">Aktif</span>
                             </div>
-                            <div class="weapon-item">
-                                <div class="weapon-icon">⚡</div>
-                                <h4>Quantum Rifle</h4>
-                                <p>Senjata jarak jauh dengan proyektil quantum entanglement</p>
-                                <span class="weapon-status">Aktif</span>
-                            </div>
-                            <div class="weapon-item">
-                                <div class="weapon-icon">◈</div>
-                                <h4>Shield Matrix</h4>
-                                <p>Perisai energi dengan regenerasi otomatis</p>
-                                <span class="weapon-status">Aktif</span>
-                            </div>
+                              <!-- DATA PULSA - TAMBAHKAN INI -->
+                                <div class="weapon-item">
+                                <div class="weapon-icon">💰</div>
+                                <h4>Data Pulsa</h4>
+                                <p>Sistem manajemen keuangan dan tracking utang</p>
+                                <button class="weapon-status" onclick="window.location.href='datapulsa/index.html'" style="cursor: pointer; border: none;">
+                                 Buka
+                                  </button>
+                                </div>
+
                         </div>
                     </div>
                 </div>
