--- a/dashboard.html
+++ b/dashboard.html
@@ -82,6 +82,11 @@
             </div>
             <div class="header-actions">
                 <div class="time-display" id="currentTime"></div>
+            <button id="mobileLogoutBtnDashboard" class="mobile-logout-btn-dashboard">
+            🚪
+        </button>
+        <div class="time-display" id="currentTime"></div>
+    </div>
             </div>
         </header>
 
@@ -195,6 +200,7 @@
                                 <p>Penyimpanan data ultra-aman</p>
                                 <button class="app-launch">Luncurkan</button>
                             </div>
+                            
                         </div>
                     </div>
                 </div>
